Fix: Scrollbar behaviour in vertical page menu

--- a/frontend/src/_styles/pages-sidebar.scss
+++ b/frontend/src/_styles/pages-sidebar.scss
@@ -617,24 +617,15 @@
     .main{
         .canvas-container{
             .page-menu-scroll {
-                scrollbar-color: var(--interactive-selected) transparent;
+                scrollbar-color: var(--interactive-hover) transparent !important;
+                scrollbar-width: thin !important;
             
                 &::-webkit-scrollbar-track {
                     background: transparent !important;
                 }
 
                 &::-webkit-scrollbar-thumb {
-                    background: var(--interactive-default) !important;
-                    border-radius: 3px;
-                }
-
-                &::-webkit-scrollbar {
-                    width: 0;
-                    background: transparent;
-                }
-                
-                &:hover {
-                    scrollbar-width: thin;
+                    background: var(--interactive-hover) !important;
                 }
             }
         }
